--- a/src/main/java/wzhkun/securepw/ui/javafx/Login.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/Login.fxml
@@ -30,16 +30,9 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#login" style="-fx-base: limegreen;" text="Login" textFill="WHITE" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="7">
-         <font>
-            <Font size="18.0" />
-         </font></Button>
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#login" style="-fx-base: limegreen;" text="Login" textFill="WHITE" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="7" />
       <PasswordField fx:id="password" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#login" style="-fx-base: lightgray;" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="6" />
       <Button mnemonicParsing="false" onAction="#reset" style="-fx-base: #ee1111;" text="Reset" wrapText="true" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="387.0" text="Please input your password" wrapText="true" GridPane.columnSpan="7" GridPane.rowIndex="5">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
+      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="387.0" text="Please input your password" wrapText="true" GridPane.columnSpan="7" GridPane.rowIndex="5" />
    </children>
 </GridPane>
