--- a/src/main/java/wzhkun/securepw/ui/javafx/PasswordBox.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/PasswordBox.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="800.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wzhkun.securepw.ui.javafx.JavaFXPasswordBox">
+<BorderPane prefHeight="800.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wzhkun.securepw.ui.javafx.PasswordBoxController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
          <children>
@@ -25,6 +25,6 @@
       </GridPane>
    </top>
    <center>
-      <VBox fx:id="box" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER" />
+      <VBox fx:id="box" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
