--- a/src/main/java/wzhkun/securepw/ui/javafx/PasswordItem.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/PasswordItem.fxml
@@ -23,6 +23,6 @@
       <TextField fx:id="app" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #ffcc33;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Button focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" style="-fx-base: #ffcc33;" text="App" wrapText="true" GridPane.rowIndex="1" />
       <TextField fx:id="account" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #99bbff;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <TextField editable="false" maxWidth="1.7976931348623157E308" minWidth="0.0" GridPane.columnSpan="2" />
+      <Button maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" onAction="#edit" style="-fx-base: #ffffff;" text="Edit" wrapText="true" GridPane.columnSpan="2" />
    </children>
 </GridPane>
