--- a/src/main/java/wzhkun/securepw/ui/javafx/PasswordItemEditor.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/PasswordItemEditor.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wzhkun.securepw.ui.javafx.PasswordItemEditorController">
    <top>
       <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -25,7 +25,7 @@
             <TextField fx:id="app" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #ffcc33;" GridPane.columnIndex="1" />
             <Button focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" style="-fx-base: #ffcc33;" text="App" wrapText="true" />
             <TextField fx:id="account" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #99bbff;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="password" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #88ffbb;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="newPassword" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #88ffbb;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Button focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" style="-fx-base: #99ffcc;" text="NewPW" wrapText="true" GridPane.rowIndex="3" />
          </children>
       </GridPane>
