迭代一UI完成

--- a/src/main/java/wzhkun/securepw/ui/javafx/PasswordItem.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/PasswordItem.fxml
@@ -7,8 +7,9 @@
 
 <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wzhkun.securepw.ui.javafx.PasswordItemController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" percentWidth="0.0" />
+    <ColumnConstraints hgrow="SOMETIMES" percentWidth="0.0" />
     <ColumnConstraints hgrow="SOMETIMES" />
+      <ColumnConstraints hgrow="SOMETIMES" percentWidth="0.0" />
   </columnConstraints>
   <rowConstraints>
       <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
@@ -17,12 +18,13 @@
       <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TextField fx:id="password" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #88ffbb;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <TextField fx:id="password" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #88ffbb;" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
       <Button focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" style="-fx-base: #99ffcc;" text="PW" wrapText="true" GridPane.rowIndex="3" />
       <Button focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" style="-fx-base: #99bbff;" text="Account" wrapText="true" GridPane.rowIndex="2" />
-      <TextField fx:id="app" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #ffcc33;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <TextField fx:id="app" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #ffcc33;" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
       <Button focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" style="-fx-base: #ffcc33;" text="App" wrapText="true" GridPane.rowIndex="1" />
-      <TextField fx:id="account" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #99bbff;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Button maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" onAction="#edit" style="-fx-base: #ffffff;" text="Edit" wrapText="true" GridPane.columnSpan="2" />
+      <TextField fx:id="account" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-base: #99bbff;" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#edit" style="-fx-base: #ffffff;" text="Edit" wrapText="true" GridPane.columnSpan="2" />
+      <Button maxHeight="1.7976931348623157E308" onAction="#delete" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" style="-fx-base: #ff3333;" text="  -  " textAlignment="CENTER" wrapText="true" GridPane.columnIndex="2" />
    </children>
 </GridPane>
