--- a/src/main/java/wzhkun/securepw/ui/javafx/Login.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/Login.fxml
@@ -33,6 +33,6 @@
       <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#login" style="-fx-base: limegreen;" text="Login" textFill="WHITE" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="7" />
       <PasswordField fx:id="password" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#login" style="-fx-base: lightgray;" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="6" />
       <Button mnemonicParsing="false" onAction="#reset" style="-fx-base: #ee1111;" text="Reset" wrapText="true" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="387.0" text="Please input your password" wrapText="true" GridPane.columnSpan="7" GridPane.rowIndex="5" />
+      <Label alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="387.0" text="Please input your password&#10;If this is your first time to login&#10;your password will be setted&#10;&#10;&#10;" textAlignment="CENTER" wrapText="true" GridPane.columnSpan="7" GridPane.rowSpan="6" />
    </children>
 </GridPane>
