--- a/src/main/java/wzhkun/securepw/ui/javafx/MainScene.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/MainScene.fxml
@@ -24,10 +24,6 @@
       </GridPane>
    </top>
    <center>
-      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" BorderPane.alignment="CENTER">
-         <content>
-            <VBox fx:id="box" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" />
-         </content>
-      </ScrollPane>
+      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
