--- a/src/main/java/wzhkun/securepw/ui/javafx/PasswordBox.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/PasswordBox.fxml
@@ -4,8 +4,8 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<VBox fx:id="box" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wzhkun.securepw.ui.javafx.PasswordBoxController">
-   <children>
-   </children>
-</VBox>
+<ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wzhkun.securepw.ui.javafx.PasswordBoxController">
+   <content>
+      <VBox fx:id="box" minHeight="0.0" minWidth="0.0" />
+   </content>
+</ScrollPane>
