--- a/src/main/java/wzhkun/securepw/ui/javafx/fxml/Export.fxml
+++ b/src/main/java/wzhkun/securepw/ui/javafx/fxml/Export.fxml
@@ -28,7 +28,7 @@
       <PasswordField fx:id="password" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#export" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
       <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancel" text="Cancel" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="7" />
       <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Export Password&#10;" textAlignment="CENTER" wrapText="true" GridPane.columnSpan="4" GridPane.rowIndex="3" />
-      <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="4" GridPane.rowIndex="2" />
+      <TextField fx:id="filePath" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="4" GridPane.rowIndex="2" />
       <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#chooseFile" style="-fx-base: yellow;" text="Choose" wrapText="true" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" />
       <CheckBox fx:id="useMyPassword" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" selected="true" text="Use My Password" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
       <Label alignment="BASELINE_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Export To" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="1" />
