--- a/SecurePasswordAndroid/app/src/main/res/layout/activity_main.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,35 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="wzhkun.securepw.ui.android.MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="="
+        android:id="@+id/main_setting"
+        android:onClick="setting"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+"
+        android:id="@+id/main_add"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="add"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sync"
+        android:id="@+id/main_sync"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/main_add"
+        android:onClick="sync"/>
+
+    <StackView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/main_stack_view"
+        android:layout_below="@+id/main_setting"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
