--- a/SecurePasswordAndroid/app/src/main/res/menu/menu_main.xml
+++ b/SecurePasswordAndroid/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="wzhkun.securepw.ui.android.MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="wzhkun.securepw.ui.android.MainActivity">
+    <item
+        android:id="@+id/main_menu_safeBox"
+        android:onClick="showSafeBox"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/safebox" />
+    <item
+        android:id="@+id/main_menu_changePassword"
+        android:onClick="showChangePassword"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/changepassword" />
+    <item
+        android:id="@+id/main_menu_cloudSync"
+        android:onClick="showSync"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/cloudsync" />
+    <item
+        android:id="@+id/main_menu_import_"
+        android:onClick="showImport"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/import_" />
+    <item
+        android:id="@+id/main_menu_export"
+        android:onClick="showExport"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/export" />
 </menu>
