--- a/SecurePasswordAndroid/app/src/main/res/layout/activity_main.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_toStartOf="@+id/main_add"
         android:onClick="sync"/>
 
-    <StackView
+    <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/main_stack_view"
