--- a/SecurePasswordAndroid/app/src/main/res/layout/password_item.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/password_item.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:layout_width="match_parent" android:layout_height="fill_parent"
     android:rowCount="4"
     android:columnCount="3"
     >
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Edit"
         android:layout_row="0"
         android:layout_column="0"
         android:layout_columnSpan="2"
-        android:layout_columnWeight="80"
-        android:onClick="edit"/>
+        android:id="@+id/item_edit"
+        android:layout_columnWeight="80" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="-"
-        android:id="@+id/button2"
         android:layout_row="0"
         android:layout_column="2"
-        android:layout_columnWeight="20"
-        android:onClick="delete"/>
+        android:id="@+id/item_delete"
+        android:layout_columnWeight="20" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="App:"
@@ -37,7 +33,6 @@
         android:layout_column="0" />
 
     <EditText
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/item_app"
         android:layout_row="1"
@@ -45,7 +40,6 @@
         android:layout_columnSpan="2" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Account:"
@@ -54,27 +48,27 @@
         android:layout_column="0" />
 
     <EditText
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText2"
         android:layout_row="2"
         android:layout_column="1"
-        android:layout_columnSpan="2" />
+        android:layout_columnSpan="2"/>
 
     <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="PW:"
         android:id="@+id/textView5"
         android:layout_row="3"
-        android:layout_column="0" />
+        android:layout_column="0"
+        android:layout_columnWeight="20" />
 
     <EditText
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText3"
         android:layout_row="3"
         android:layout_column="1"
-        android:layout_columnSpan="2" />
+        android:layout_columnSpan="2"
+        android:layout_columnWeight="80"
+        />
 </GridLayout>
