--- a/SecurePasswordAndroid/app/src/main/res/layout/password_item.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/password_item.xml
@@ -8,7 +8,7 @@
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_height="wrap_content"
-        android:text="Edit"
+        android:text="@string/edit"
         android:layout_row="0"
         android:layout_column="0"
         android:layout_columnSpan="2"
@@ -27,7 +27,7 @@
     <TextView
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="App:"
+        android:text="@string/app"
         android:id="@+id/textView3"
         android:layout_row="1"
         android:layout_column="0" />
@@ -42,7 +42,7 @@
     <TextView
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Account:"
+        android:text="@string/acount"
         android:id="@+id/textView4"
         android:layout_row="2"
         android:layout_column="0" />
@@ -57,7 +57,7 @@
     <TextView
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="PW:"
+        android:text="@string/password"
         android:id="@+id/textView5"
         android:layout_row="3"
         android:layout_column="0"
