--- a/SecurePasswordAndroid/app/src/main/res/layout/activity_main.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="sync"
+        android:text="@string/sync"
         android:id="@+id/main_sync"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/main_add"
