--- a/SecurePasswordAndroid/app/src/main/res/layout/password_item.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/password_item.xml
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="fill_parent"
-    android:rowCount="4"
-    android:columnCount="3"
     >
 
     <Button
         style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/edit"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
         android:id="@+id/item_edit"
-        android:layout_columnWeight="80" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/item_delete" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="-"
-        android:layout_row="0"
-        android:layout_column="2"
         android:id="@+id/item_delete"
-        android:layout_columnWeight="20" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/app"
         android:id="@+id/textView3"
-        android:layout_row="1"
-        android:layout_column="0" />
+        android:layout_below="@+id/item_edit"
+        android:layout_alignParentStart="true" />
 
     <EditText
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/item_app"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_columnSpan="2" />
+        android:layout_alignTop="@+id/textView3"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/textView3" />
 
     <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/acount"
         android:id="@+id/textView4"
-        android:layout_row="2"
-        android:layout_column="0" />
+        android:layout_below="@+id/item_app"
+        android:layout_alignParentStart="true" />
 
     <EditText
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText2"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_columnSpan="2"/>
+        android:layout_below="@+id/item_app"
+        android:layout_alignEnd="@+id/item_app"
+        android:layout_alignStart="@+id/item_app" />
 
     <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/password"
         android:id="@+id/textView5"
-        android:layout_row="3"
-        android:layout_column="0"
-        android:layout_columnWeight="20" />
+        android:layout_below="@+id/editText2"
+        android:layout_alignParentStart="true" />
 
     <EditText
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText3"
-        android:layout_row="3"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_columnWeight="80"
-        />
-</GridLayout>
+        android:layout_below="@+id/editText2"
+        android:layout_toEndOf="@+id/textView4" />
+</RelativeLayout>
